--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -7,4 +7,9 @@ spring.application.name=pedidos-ms
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
 eureka.instance.instance-id=${spring.application.name}:${random.int}
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
 server.port=0
